--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "nodemon": "^2.0.7",
         "tslint": "^5.12.1",
-        "typescript": "^3.3.3"
+        "typescript": "^3.3.3",
+        "@types/node": "^14.14.27"
     }
 }
