--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   "homepage": "https://github.com/GELight/sml-typescript-project#readme",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' npm run build",
-    "build": "tsc && node dist/index.js"
+    "build": "tsc && node dist/index.js",
+    "test:unit": "tsc && jest --coverage"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.27",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.1",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.3",
-    "@types/node": "^14.14.27"
+    "typescript": "^3.3.3"
   },
   "dependencies": {}
 }
