--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
       "sourceMap": true,
       "outDir": "dist"
     },
-    "lib": ["es2015"]
+    "lib": [
+      "es2015"
+    ],
+    "exclude": [
+      "node_modules",
+      "**/*.spec.ts"
+    ]
   }
